removing the period in the title

--- a/src/content/blog/chicago-competition.mdx
+++ b/src/content/blog/chicago-competition.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'My Experience at The UChicago Trading Competition.'
+title: 'My Experience at The UChicago Trading Competition'
 description: 'Or: How To Lose The UChicago Trading Competition.'
 pubDate: 'May 27 2024'
 heroImage: 'stonks.png'
