drafting and colors

--- a/src/content/blog/chicago-competition.mdx
+++ b/src/content/blog/chicago-competition.mdx
@@ -2,7 +2,6 @@
 title: 'My Experience at The UChicago Trading Competition'
 description: 'Or: How To Lose The UChicago Trading Competition.'
 pubDate: 'May 27 2024'
-heroImage: 'stonks.png'
 ---
 
 Some friends and I competed in the 2024 UChicago Trading competition and represented UW-Madison (Go Badgers!). We did better than we thought we would, had a great time, made many mistakes, and learned a lot.
@@ -38,7 +37,7 @@ Once all rounds were complete, the organizers pulled back the curtain and explai
 
 - Many securities were highly correlated, and we could have exploited this to predict fair value via pairs trading better.
 
-- Because performance was based on rank, not raw PnL, some teams randomly traded securities until they reached a certain profit threshold and then did nothing for the rest of the round. I call this the Moneyball strategy.
+- Because performance was based on rank, not raw PnL, some teams randomly traded securities until they reached a certain profit threshold and then did nothing for the rest of the round.
 
 - Market Making does work without pennying.
 
