colors are hard

--- a/src/content/blog/uw-madison-courses.mdx
+++ b/src/content/blog/uw-madison-courses.mdx
@@ -4,17 +4,19 @@ description: 'A review of my coursework at Wisconsin-Madison'
 pubDate: 'January 1 2025'
 ---
 
-Below are the courses I've taken at <span class="text-accent">UW-Madison</span>. 
-The credit count for each course is in parenthesis; if a credit count isn't indicated, a course is three credits. I was initially declared a double major in Computer Sciences 
+Below are the courses I've taken at UW-Madison. 
+The credit count for each course is in parenthesis; if a credit count isn't indicated, a course is three credits. I initially declared a double major in Computer Sciences 
 and Legal Studies. But, I dropped Legal Studies and picked up a Math certificate (equivalent to a minor). I'm also pursuing Honors in the Liberal Arts 
 and Honors in the Major for Computer Sciences. Both of these require a slightly more intense course load via honors courses.
-Some courses are seminars or passion courses created by one professor. For those classes, I'll include the professor's name.
+Some courses are seminars or passion courses created by one professor and taking them with another may result in a vastly difference experience. For those classes, I'll include the professor's name.
 
 #### Legend:
 - (<span class="font-bold">!</span>): Particularly challenging, intense, or required many hours of work
 - (<span class="font-bold">=</span>): Gen-ed course
 - (<span class="font-bold">+</span>): Taken with honors (Honors Optional, Honors Only, or Accelerated Honors)
 - (<span class="font-bold">^</span>): Particularly Interesting or a class I just enjoyed
+
+<hr class="border-primary"/>
 
 ### Fall 2024
 - CS 532: Matrix Methods in Machine Learning
@@ -24,7 +26,7 @@ Some courses are seminars or passion courses created by one professor. For those
 - PHILOS 543: AI Ethics w/ Prof. Annette Zimmermann **(^)**
 
 ### Spring 2024
-- CS 354: Machine Organization and Programming
+- CS 354: Machine Organization and Programming **(^)**
 - POLI SCI 601: Proseminar: Topics in Political Science w/ Prof. Ryan Owens **(!+)**
 - ANTHRO 105: Principles of Biological Anthropology **(=+)**
 - CS 540: Intro. to Artificial Intelligence
