saving dark/light theme work

--- a/src/content/blog/uw-madison-courses.mdx
+++ b/src/content/blog/uw-madison-courses.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'UW-Madison Classes'
 description: 'A review of my coursework at Wisconsin-Madison'
-pubDate: 'January 1 2025'
+pubDate: 'December 25 2024'
 ---
 
 Below are the courses I've taken at UW-Madison. 
@@ -10,19 +10,22 @@ and Legal Studies. But, I dropped Legal Studies and picked up a Math certificate
 and Honors in the Major for Computer Sciences. Both of these require a slightly more intense course load via honors courses.
 Some courses are seminars or passion courses created by one professor and taking them with another may result in a vastly difference experience. For those classes, I'll include the professor's name.
 
+For UW-Madison CS Majors and *especially* incoming students, I highly recommend looking at [Michael Noguera's course map](https://www.noguera.dev/course-map/). 
+
+
 #### Legend:
 - (<span class="font-bold">!</span>): Particularly challenging, intense, or required many hours of work
 - (<span class="font-bold">=</span>): Gen-ed course
 - (<span class="font-bold">+</span>): Taken with honors (Honors Optional, Honors Only, or Accelerated Honors)
 - (<span class="font-bold">^</span>): Particularly Interesting or a class I just enjoyed
 
-<hr class="border-primary"/>
+<hr class="border-text"/>
 
 ### Fall 2024
 - CS 532: Matrix Methods in Machine Learning
 - CS 544: Intro. to Big Data Systems **(^)**
 - MATH 421: Intro. to the Theory of Single Variable Calculus
-- MATH 431: Intro. to the Theory of Probability
+- MATH 431: Intro. to the Theory of Probability **(!)**
 - PHILOS 543: AI Ethics w/ Prof. Annette Zimmermann **(^)**
 
 ### Spring 2024
