redesign done or now

--- a/src/content/blog/uw-madison-courses.mdx
+++ b/src/content/blog/uw-madison-courses.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'UW-Madison Classes'
 description: 'A review of my coursework at Wisconsin-Madison'
-pubDate: 'December 25 2024'
+pubDate: 'December 28 2024'
 ---
 
 Below are the courses I've taken at UW-Madison. 
@@ -17,7 +17,7 @@ For UW-Madison CS Majors and *especially* incoming students, I highly recommend 
 - (<span class="font-bold">!</span>): Particularly challenging, intense, or required many hours of work
 - (<span class="font-bold">=</span>): Gen-ed course
 - (<span class="font-bold">+</span>): Taken with honors (Honors Optional, Honors Only, or Accelerated Honors)
-- (<span class="font-bold">^</span>): Particularly Interesting or a class I just enjoyed
+- (<span class="font-bold">^</span>): Particularly interesting or a class I just enjoyed
 
 <hr class="border-text"/>
 
