--- a/src/content/blog/nash-improvement.mdx
+++ b/src/content/blog/nash-improvement.mdx
@@ -11,7 +11,7 @@ Here's some regular markdown content.
 
 <D3Visualization client:load />
 
-
+Inspiration from: https://www.mit.edu/~gfarina/2024/6S890f24_L02_nfg_nash/L02.pdf
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ornare, ex eget ullamcorper pellentesque, nisl arcu hendrerit erat, a dapibus sem dui non augue. Sed felis elit, feugiat in sem sit amet, bibendum vulputate enim. Etiam et magna nec eros ullamcorper imperdiet quis quis massa. Phasellus commodo sapien tortor, vel mattis erat molestie et. Mauris sit amet justo id sapien viverra faucibus ut quis leo. Maecenas quis neque odio. Quisque non suscipit risus. Nulla ut condimentum augue. In eu libero elit. Cras ac mattis justo. Nulla sit amet tincidunt massa.
 
