--- a/src/content/blog/nash-improvement.mdx
+++ b/src/content/blog/nash-improvement.mdx
@@ -22,3 +22,12 @@ Fusce tempor tempor libero nec tempus. Praesent ultrices ante non imperdiet temp
 Aliquam mattis nibh sapien, non vestibulum ex consequat nec. Nunc vel nisl sem. Curabitur vehicula, lacus eu eleifend elementum, nibh erat pulvinar ipsum, a volutpat metus quam in nisi. Nam consequat ante erat. Curabitur eget purus quis sapien maximus dignissim quis vel mi. Mauris sit amet tellus in neque varius iaculis sed sed ligula. Aenean eleifend, orci nec tincidunt fringilla, nisl mauris maximus elit, nec sollicitudin elit urna eu ligula. Etiam sit amet purus velit.
 
 Phasellus molestie augue vitae ligula viverra commodo. Quisque eget aliquet sapien, a tincidunt justo. Aliquam erat volutpat. Suspendisse non pretium nisi, nec dapibus nunc. Vivamus sodales risus sit amet tristique iaculis. Curabitur varius tincidunt lacus, nec gravida odio ornare quis. Nulla laoreet sagittis enim. Phasellus tincidunt non ligula et tincidunt. Donec commodo libero a lorem feugiat commodo. In hac habitasse platea dictumst. Aenean lectus diam, bibendum quis accumsan vitae, venenatis eget erat. Maecenas vitae turpis enim.
+
+## Some Math
+
+$$
+\mathbb{E}_{\mu_{0}}[X_{n + 1} = x_{n + 1}| X_n = x_n, \ldots, X_0 = x_0] = 0
+$$
+
+## Technical Details
+The interactive portion of this blog post is a React component that renders client side. The visuals were made using [D3.js](https://d3js.org/). I "vibe-coded" some of the styling for the UI using claude.
