forgot that os is 4 credits

--- a/src/content/blog/uw-madison-courses.mdx
+++ b/src/content/blog/uw-madison-courses.mdx
@@ -19,7 +19,7 @@ For UW-Madison CS Majors and *especially* incoming students, I highly recommend 
 <hr class="border-text"/>
 
 ### Spring 2025
-- CS 537: Intro. to [Operating Systems](https://pages.cs.wisc.edu/~remzi/OSTEP/)[^os-note] **(!^)**
+- CS 537 (4): Intro. to [Operating Systems](https://pages.cs.wisc.edu/~remzi/OSTEP/)[^os-note] **(!^)**
 - MATH 632: Intro. to Stochastic Processes **(!)**
 - GERMAN 276: Global Readers; Digital Age  **(=+)**
 - CS 839: Game Theory, Optimization & Learning w/ [Prof. Manolis Vlatakis](https://pages.cs.wisc.edu/~vlatakis/) **(!+^)**
@@ -32,7 +32,6 @@ For UW-Madison CS Majors and *especially* incoming students, I highly recommend 
 - MATH 421: Intro. to the Theory of Single Variable Calculus
 - MATH 431: Intro. to the Theory of Probability **(!)**
 - PHILOS 543: AI Ethics w/ [Prof. Annette Zimmermann](https://www.annette-zimmermann.com/) **(^)**
-
 
 ### Spring 2024
 - CS 354: Machine Organization and Programming **(^)**
