--- a/src/content/blog/uw-madison-courses.mdx
+++ b/src/content/blog/uw-madison-courses.mdx
@@ -2,10 +2,10 @@
 title: 'UW-Madison Classes'
 description: 'A review of my coursework at Wisconsin-Madison'
 pubDate: 'December 28 2024'
-updatedDate: 'May 9 2024'
+updatedDate: 'May 11 2024'
 ---
 
-Below are the courses I’ve taken at UW-Madison. The credit count for each course is in parentheses; if a credit count isn’t indicated, a course is three credits. I initially declared a double major in Computer Sciences and Legal Studies. But, I dropped Legal Studies and picked up a Math certificate (equivalent to a minor). I’m also pursuing Honors in the Liberal Arts and Honors in the Major for Computer Sciences. Both of these require a slightly more intense course load via honors courses. Some courses are seminars or passion courses created by one professor, and taking them with another may result in a vastly different experience. For those classes, I’ll include the professor’s name.
+Below are the courses I’ve taken at UW-Madison. The credit count for each course is in parentheses; if a credit count isn’t indicated, a course is three credits. I initially declared a double major in Computer Sciences and Legal Studies. But, I dropped Legal Studies and picked up a Math certificate (equivalent to a minor). I’m also pursuing Honors in the Liberal Arts and Honors in the Major for Computer Sciences. Both require a slightly more intense course load via honors courses. Some courses are seminars or passion courses created by one professor, and taking them with another may result in a vastly different experience. For those classes, I’ll include the professor’s name.
 
 For UW-Madison CS Majors and *especially* incoming students, I highly recommend looking at [Michael Noguera's course map](https://www.noguera.dev/course-map/). 
 
@@ -13,7 +13,7 @@ For UW-Madison CS Majors and *especially* incoming students, I highly recommend 
 #### Legend:
 - (<span class="font-bold">!</span>): Particularly challenging, intense, or required many hours of work
 - (<span class="font-bold">=</span>): Gen-ed course
-- (<span class="font-bold">+</span>): Taken with honors (Honors Optional, Honors Only, or Accelerated Honors)
+- (<span class="font-bold">+</span>): Graduate, honors optional, honors only, or accelerated honors course
 - (<span class="font-bold">^</span>): Particularly interesting or enjoyable
 
 <hr class="border-text"/>
@@ -22,7 +22,7 @@ For UW-Madison CS Majors and *especially* incoming students, I highly recommend 
 - CS 537 (4): Intro. to [Operating Systems](https://pages.cs.wisc.edu/~remzi/OSTEP/)[^os-note] **(!^)**
 - MATH 632: Intro. to Stochastic Processes **(!)**
 - GERMAN 276: Global Readers; Digital Age  **(=+)**
-- CS 839: Game Theory, Optimization & Learning w/ [Prof. Manolis Vlatakis](https://pages.cs.wisc.edu/~vlatakis/) **(!+^)**
+- CS 839: Game Theory, Optimization & Learning w/ [Prof. Manolis Vlatakis](https://pages.cs.wisc.edu/~vlatakis/) **(+^)**
 
 [^os-note]: While I usually encourage people only to take elective courses that interest them, the Operating Systems course at Madison is fantastic, and not taking it wastes a valuable opportunity.
 
