--- a/src/content/blog/pgp-key.mdx
+++ b/src/content/blog/pgp-key.mdx
@@ -1,3 +1,10 @@
+---
+title: 'My PGP Public Key'
+description: 'Because I was too lazy to make a dedicated page'
+pubDate: 'May 18 2025'
+---
+
+```
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 xsFNBGG46ScBEAD2DvPY+pkKE2b1LlKLFDWDujI+pTMf6oGn9hcz7f5UbwRU
 D8O3RyMfvPBaObY/a4kp/RV+vUzEM+Uk6PrwFaQ/4diVYRLi7ARK4lYsgFl4
@@ -53,3 +60,4 @@ QCDG8uP4xRr1tvCtCcUXLXfGUoSEOzPLFZdJxVLPg8xGxcwyuu/VO6KUQFL6
 yytcXpQ/IfNfA6m8KJToc5mh
 =mNzM
 -----END PGP PUBLIC KEY BLOCK-----
+```
